--- a/my-web-2/about/index.html
+++ b/my-web-2/about/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./bootstrap-5.2.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap-5.2.3/css/bootstrap.min.css">
     <style type="text/css">
         .footer {
             background-color: #333;
@@ -57,7 +57,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">This is my web site port 80</a>
+            <a class="navbar-brand" href="../index.html">This is my web site port 80</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-md-6 d-flex justify-content-center flex-column align-items-start p-5">
-                    <h1>Welcome to My About</h1>
+                    <h1>About US</h1>
                     <p>My name is Jakkapan Attala</p>
                     <p>ID: 66130030</p>
                     <p>I am a web developer and I am also studying at Dhurakij Pundit University.</p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/img-01.jpg" alt="My Image" class="rounded float-start img-cover img-hover"
+                    <img src="../images/img-01.jpg" alt="My Image" class="rounded float-start img-cover img-hover"
                         width="500">
                 </div>
             </div>
@@ -98,17 +98,17 @@
                     <div class="carousel-inner">
                         <div class="img-bg-05"></div>
                         <div class="carousel-item active">
-                            <div class="d-block w-100 back-img" style="background-image: url('images/img-01.jpg');">
+                            <div class="d-block w-100 back-img" style="background-image: url('./../images/img-01.jpg');">
                                 <!-- <img src="images/img-02.jpg" class="d-block w-100" alt="img"> -->
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="d-block w-100 back-img" style="background-image: url('images/img-02.jpg');">
+                            <div class="d-block w-100 back-img" style="background-image: url('./../images/img-02.jpg');">
                                 <!-- <img src="images/img-03.jpg" class="d-block w-100" alt="img"> -->
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="d-block w-100 back-img" style="background-image: url('images/img-03.jpg');">
+                            <div class="d-block w-100 back-img" style="background-image: url('./../images/img-03.jpg');">
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
         </div>
         </div>
     </footer>
-    <script src="./bootstrap-5.2.3/js/bootstrap.min.js"></script>
+    <script src="/bootstrap-5.2.3/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function () {
