--- a/my-web-2/index.html
+++ b/my-web-2/index.html
@@ -57,7 +57,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">This is my web site port 80</a>
+            <a class="navbar-brand" href="./index.html">My About</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
